# picow_webserver

./: .gitignore  CMakeLists.txt  README.md  TODO  build.sh  compile.sh  hardware notes.txt  upload.sh
hbridge/: hbridge.ino
source/: CMakeLists.txt  config.h  lwipopts.h  main.cpp  sysdata.hpp  wifi.cpp  wifi.hpp
source/web/html/: index.shtml  test.html  test.shtml
source/webserver/: lwipopts.h  webserver.cpp  webserver.hpp
source/webserver/handlers/: cgi.cpp  cgi.hpp  ssi.cpp  ssi.hpp
src/: CMakeLists.txt  main.cpp
utils/: makefsdata
